added basic layout to html, css will come after js is functioning

--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
   <title>Translator</title>
 </head>
 <body>
-
-
+  <form>
+    <textarea name="textbox" cols="110" rows="10">Please enter a holiday greeting you would like translated(poorly) into one of the four options below.</textarea>
+    <label for="italian">Italian:</label>
+    <input type="radio" id="italian" name="lang"></input>
+    <label for="german">German:</label>
+    <input type="radio" id="german" name="lang"></input>
+    <label for="spanish">Spanish:</label>
+    <input type="radio" id="spanish" name="lang"></input>
+    <label for="french">French:</label>
+    <input type="radio" id="french" name="lang"></input>
+    <button id="transbtn" type="">Translate!</button>
+    <button id="clr" type="">Clear</button>
+  </form>
+  <div id=""></div>
 
 
   <script src="iife.js"></script>
