--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <button id="transbtn" type="">Translate!</button>
     <button id="clr" type="">Clear</button>
   </form>
-  <div id=""></div>
+  <div id="translatedText"></div>
 
 
   <script src="iife.js"></script>
