made initial css file

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Translator</title>
+  <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 
-    <textarea name="textbox" cols="110" rows="10" id="input" placeholder="Please enter a holiday greeting you would like translated(poorly) into one of the four options below."></textarea><br>
+    <textarea name="textbox" cols="75" rows="10" id="input" placeholder="Please enter a holiday greeting you would like translated(poorly) into one of the four options below."></textarea><br>
     <label for="italian">Italian:</label>
     <input type="radio" id="italian" name="lang"></input>
     <label for="german">German:</label>
