changed some css and html to make the app more elastic when the page is resized. Also added some color styling

--- a/index.html
+++ b/index.html
@@ -11,14 +11,24 @@
       <h1>Almost Universal Holiday Translator</h1>
     </header>
     <textarea name="textbox" rows="4" id="input" placeholder="Please enter a holiday greeting you would like translated(poorly) into one of the four options below."></textarea><br>
+    <div class="navbar">
+    <div class="navbtn">
     <label for="italian">Italian:</label>
-    <input type="radio" id="italian" name="lang"></input>
+     <input type="radio" id="italian" name="lang"></input>
+     </div>
+     <div class="navbtn">
     <label for="german">German:</label>
-    <input type="radio" id="german" name="lang"></input>
+     <input type="radio" id="german" name="lang"></input>
+     </div>
+     <div class="navbtn">
     <label for="spanish">Spanish:</label>
     <input type="radio" id="spanish" name="lang"></input>
+    </div>
+    <div class="navbtn">
     <label for="french">French:</label>
     <input type="radio" id="french" name="lang"></input>
+    </div>
+    </div>
     <button id="transbtn" type="">Translate!</button>
     <button id="clr" type="">Clear</button>
   </div>
