added dancing santa

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   <title>Translator</title>
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
+<img class="dancers" "style="-webkit-user-select: none" src="http://www.clipartbest.com/cliparts/RcA/6LA/RcA6LAd5i.gif">
 <body>
+</div>
   <div id="primary-content">
+
     <header>
       <h1>Almost Universal Holiday Translator</h1>
     </header>
