--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <input type="radio" id="french" name="lang"></input>
     </div>
     </div>
-    <button id="transbtn" type="">Translate!</button>
-    <button id="clr" type="">Clear</button>
+    <button class="button" id="transbtn" type="">Translate!</button>
+    <button class="button" id="clr" type="">Clear</button>
   </div>
 
   <div id="translatedText">
