--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
   <meta charset="UTF-8">
   <title>Translator</title>
   <link rel="stylesheet" type="text/css" href="main.css">
+
 </head>
-<img class="dancers" "style="-webkit-user-select: none" src="http://www.clipartbest.com/cliparts/RcA/6LA/RcA6LAd5i.gif">
+
 <body>
-</div>
+<article class="gif-contain">
+<img class="dancers" "style="-webkit-user-select: none" src="http://www.clipartbest.com/cliparts/RcA/6LA/RcA6LAd5i.gif">
+</article>
   <div id="primary-content">
 
     <header>
